# stock-notifier

./: .envrc.template  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_scan.yml
src/: main.py
src/application/: services.py
src/domain/: interfaces.py  models.py  services.py
src/infrastructure/: notifiers.py  storage.py
src/infrastructure/adapters/: kr_stock_adapter.py  yfinance_adapter.py
tests/domain/: test_strategy.py
