[project]
name = "optimal_stock_notifier"
version = "0.1.0"
description = "DDD based undervalued stock scanner and notifier"
authors = [{ name = "Youngmin", email = "your.email@example.com" }]
dependencies = [
    "yfinance",
    "pandas",
    "requests",
    "python-dotenv",
    "finance-datareader",
    "beautifulsoup4",
    "html5lib",
    "lxml",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
